--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "gulp-notify": "^3.2.0",
     "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.2",
-    "gulp-sourcemaps": "^2.6.5"
+    "gulp-sourcemaps": "^2.6.5",
+    "swiper": "^5.3.1"
   },
   "dependencies": {
     "normalize.css": "^8.0.1"
