--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.5",
-    "swiper": "^5.3.1"
+    "swiper": "^5.3.1",
+    "wow.js": "^1.2.2"
   },
   "dependencies": {
     "normalize.css": "^8.0.1"
